--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "servana",
+  "name": "@colevoss/servana",
   "version": "1.0.2",
   "description": "Typescript Framework for Restana",
   "main": "dist/index.js",
@@ -10,6 +10,9 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:colevoss/servana.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
     "tsc": "tsc",
