--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@colevoss/servana",
-  "version": "1.0.5-0",
+  "version": "1.0.5-beta.0",
   "description": "Typescript Framework for Restana",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
