--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "dev": "nodemon",
     "build": "rimraf dist && npm run tsc",
     "prepare": "npm run build",
-    "version": "git add -A src",
-    "postversion": "git push && git push --tags",
+    "_version": "git add -A src",
+    "_postversion": "git push && git push --tags",
     "test-swag": "ts-node scripts/swag",
     "md-docs": "swagger-markdown"
   },
