--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -31,4 +31,4 @@ jobs:
         run: npm --no-git-tag-version version prerelease --preid=beta
 
       - name: Publish
-        run: npm publish
+        run: npm publish --opt ${{ secrets.GITHUB_TOKEN }}
