--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -11,9 +11,6 @@ jobs:
         node: [8, 10, 12]
 
     steps:
-      - name: Test ENV
-        run: echo ${{ secrets.GITHUB_TOKEN }}
-
       - uses: actions/checkout@master
 
       - name: Setup Node
@@ -29,6 +26,9 @@ jobs:
 
       - name: Beta Version
         run: npm --no-git-tag-version version prerelease --preid=beta
+
+      - name: Publish Prep
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
 
       - name: Publish
         run: npm publish --opt ${{ secrets.GITHUB_TOKEN }}
