--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -31,4 +31,4 @@ jobs:
         run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
 
       - name: Publish
-        run: npm publish --opt ${{ secrets.GITHUB_TOKEN }}
+        run: npm publish
