--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -6,9 +6,9 @@ jobs:
     name: 'Testing'
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node: [8, 10, 12]
+    # strategy:
+    #   matrix:
+    #     node: [8, 10, 12]
 
     steps:
       - uses: actions/checkout@master
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@master
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 12
 
       - name: npm install
         run: npm install
@@ -26,9 +26,7 @@ jobs:
 
       - name: Beta Version
         run: npm --no-git-tag-version version prerelease --preid=beta
-
-      - name: Publish Prep
-        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
-
-      - name: Publish
-        run: npm publish
+      # - name: Publish Prep
+      #   run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
+      # - name: Publish
+      #   run: npm publish
