--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Beta Version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO_OWNDER: colevoss
         run: npm version prerelease --preid=beta && git push
       # - name: Publish Prep
       #   run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
