--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -36,7 +36,7 @@ jobs:
           git config user.email "voss.cole@gmail.com"
           git config user.name "Cole Voss"
           npm version prerelease --preid=beta
-          git push https://${{ git.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ git.repository }} HEAD:${{ git.sha }}
+          git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.sha }}
       # - name: Publish Prep
       #   run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
       # - name: Publish
