--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -1,10 +1,8 @@
 name: 'Publish'
 on:
-  push:
-    branches-ignore:
-      - master
+  create:
     tags:
-      - v*-beta.*
+      - '*beta*'
 
 jobs:
   build:
