--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -37,6 +37,7 @@ jobs:
           git config user.name "Cole Voss"
           npm version prerelease --preid=beta
           git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
+          git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }} --tags
       # - name: Publish Prep
       #   run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
       # - name: Publish
