--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -1,8 +1,10 @@
 name: 'Publish'
 on:
-  create:
+  push:
+    branches-ignore:
+      - master
     tags:
-      - '*'
+      - v*-beta.*
 
 jobs:
   build:
