--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches-ignore:
       - master
-    tags-ignore:
-      - 'v*-beta.*'
+    # tags-ignore:
+    #   - 'v*-beta.*'
 
 jobs:
   build:
