--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -33,13 +33,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config user.email "voss.cole@gmail.com"
-          git config user.name "Cole Voss"
+          npm --no-git-tag-version version prerelease --preid=${{ github.sha }}
+          npm version prerelease --preid=beta && git push
           npm version prerelease --preid=beta
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
           npm publish
-          git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
-          git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }} --tags
-      # - name: Publish Prep
-      #   run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
-      # - name: Publish
-      #   run: npm publish
