--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,7 +34,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm --no-git-tag-version version prerelease --preid=beta-${{ github.sha }}
-          npm version prerelease --preid=beta && git push
-          npm version prerelease --preid=beta
+          git add -A
+          git commit -m 'Version'
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
           npm publish
