--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,6 +34,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm --no-git-tag-version version prerelease --preid=beta-${{ github.sha }}
+          git config --global user.email "voss.cole@gmail.com"
+          git config --global user.name "Cole Voss"
           git add -A
           git commit -m 'Version'
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
