--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -1,17 +1,13 @@
-name: 'On Push'
+name: 'Master Push'
 on:
   push:
-    branches-ignore:
+    branches:
       - master
 
 jobs:
   build:
     name: 'Testing'
     runs-on: ubuntu-latest
-
-    # strategy:
-    #   matrix:
-    #     node: [8, 10, 12]
 
     steps:
       - uses: actions/checkout@master
@@ -27,14 +23,7 @@ jobs:
       - name: Test
         run: npm test
 
-      - name: Beta Version
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish
         run: |
-          npm --no-git-tag-version version prerelease --preid=beta-${{ github.sha }}
-          git config --global user.email "voss.cole@gmail.com"
-          git config --global user.name "Cole Voss"
-          git add -A
-          git commit -m 'Version'
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
           npm publish
