--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@colevoss/servana",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.3.0",
+  "description": "Typescript Framework for Restana",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -11,14 +11,17 @@
     "type": "git",
     "url": "git@github.com:colevoss/servana.git"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "tsc": "tsc",
     "test": "NODE_ENV=test jest --collect-coverage",
     "dev": "nodemon",
     "build": "rimraf dist && npm run tsc",
     "prepare": "npm run build",
-    "version": "git add -A src",
-    "postversion": "git push && git push --tags",
+    "_version": "git add -A src",
+    "_postversion": "git push && git push --tags",
     "test-swag": "ts-node scripts/swag",
     "md-docs": "swagger-markdown"
   },
@@ -33,7 +36,6 @@
     "@types/js-yaml": "^3.12.1",
     "@types/node": "^12.7.5",
     "@types/response-time": "^2.3.4",
-    "@types/supertest": "^2.0.8",
     "@types/tmp": "^0.1.0",
     "axios": "^0.19.0",
     "jest": "^24.9.0",
@@ -42,7 +44,6 @@
     "prettyjson": "^1.2.1",
     "response-time": "^2.3.2",
     "rimraf": "^3.0.0",
-    "supertest": "^4.0.2",
     "tmp": "^0.1.0",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
