--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -25,5 +25,5 @@ jobs:
 
       - name: Publish
         run: |
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > $HOME/.npmrc
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > $HOME/.npmrc
           npm publish
